# ocw-ebics

./: .gitignore  Cargo.toml  Dockerfile  INSTRUCTIONS.md  Makefile  README.md  docker-compose-api.yml  docker-compose-test.yml  example.json  rust-toolchain.toml
.github/workflows/: build-push-template.yml  check.yml  coverage.yml  dockerhub.yml  unit-tests.yml
docs/: example.md  structure.plantuml
ebics-demo/: DEMO.md  README.md
ebics-demo/src/: AccountSelector.js  App.js  FiatRampsModule.js  TransferTx.js
ebics-demo/src/config/: common.json
ebics-demo/src/substrate-lib/: SubstrateContext.js
mock-server/: Cargo.toml  README.md
mock-server/src/: lib.rs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  service.rs
pallets/fiat-off-ramps/: Cargo.toml
pallets/fiat-off-ramps/src/: lib.rs
pallets/fiat-ramps/: Cargo.toml  types.json
pallets/fiat-ramps/src/: crypto.rs  helpers.rs  impls.rs  lib.rs  mock.rs  tests.rs  types.json  types.rs  utils.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: init_libeufin_sandbox.sh  peg100.sh
