[workspace.package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
edition = "2021"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
license = "MIT-0"
homepage = "https://substrate.io"

[workspace]
members = [
    'node',
    'pallets/fiat-ramps',
    'runtime',
]
resolver = "2"
[profile.release]
panic = 'unwind'
