[package]
name = "fiat-ramps"
version = "1.0.0"
edition = "2021"
authors = ['Dastanbek Samatov']
description = "An offchain-worker pallet to communicate with EBICS services"
license = "GPL-3.0-or-later"

[dependencies]
lite-json = { git = "https://github.com/xlc/lite-json.git", branch ="master", default-features = false }
log = { version = "0.4.17", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

# Substrate packages
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.30" }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.30" }
sp-keystore = { git = "https://github.com/paritytech/substrate.git", optional = true, branch = "polkadot-v0.9.30" }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.30" }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.30" }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.30" }
sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.30" }

[dev-dependencies]
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
pallet-sudo = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }

[features]
default = ['std']
std = [
	'frame-support/std',
	'frame-system/std',
	'codec/std',
	'scale-info/std',
	'sp-runtime/std',
	'sp-std/std',
	'sp-io/std',
	'log/std',
	'lite-json/std',
	'sp-core/std',
	'sp-keystore',
	'pallet-balances/std',
	'pallet-timestamp/std',
	'pallet-sudo/std'
]
